--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    background-color: #e3e7ee;
+    background-color: #3c4d5d;
 }
 
 .p-toolbar, p-component {
